<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 47 Degrees, LLC
  ~  http://47deg.com
  ~  hello@47deg.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>

    <string name="appName">SwipeListView Demo</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>

    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>

    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>

    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>

    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>

    <string name="loading">Loading</string>

</resources>